# statemachine

./: README.md
fullTest/: CMakeLists.txt  main.cpp
fullTest/userstate/: StateBeginCharge.cpp  StateBeginCharge.h  StateDoJob.cpp  StateDoJob.h  StateFinish.h  StateFinishCharge.cpp  StateFinishCharge.h  StateGetJob.cpp  StateGetJob.h
simpleTest/: CMakeLists.txt  main.cpp
simpleTest/userstate/: StateFinish.cpp  StateStop.cpp  StateStop.h
statemachine/: State.cpp  State.h  StateMachine.cpp  StateMachine.h
